---
source: crates/shell/src/shells/murex.rs
expression: Murex.format_hook(hook).unwrap()
---
function _starbase_hook {
  starbase hook murex -> source
}

event onPrompt _starbase_hook=before {
  _starbase_hook
}
